Update URL for Jamendo Database.

Jamendo has changed hosts.  This updates the url to the new location.
The api is deprecated, but it works again at least.

BUG: 331934
CCMAIL: yashladia@gmail.com
REVIEW: 116741